--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,11 @@ jobs:
         wget https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-22/wasi-sdk_22.0_amd64.deb
         sudo dpkg -i wasi-sdk_22.0_amd64.deb
     - name: Build Extism
+      env:
+        WASI_SDK_PATH: /opt/wasi-sdk
       run: |
         cd perl-sdk
-        /opt/wasi-sdk/bin/clang -o Extism/host.wasm host.c -mexec-model=reactor
+        make wasm
         cd Extism
         perl Makefile.PL
         make manifest
